
Version 0.3.4 - ??
- [bugfix] Improve the default settings of buildModuleProgrammatically for WFYAHOO_widget_Module. Prevents Modules from being re-arranged on page once rendered.
- [bugfix] Add html escaping to WFDieselKeyword.
- [bugfix] Add encodeUriComponent() to WFYAHOO_widget_TreeView ajax methods so that nodeId's with '/' characters work.

Version 0.3.3 - 11/2/2009
- [BC-break] [new] WFRPC.execute() now automatically array-ifies arguments that are arrays of scalars. IE array(1,2,3) ==> arg_0[]=1&arg_0[]=2&arg_0[]=3.

Version 0.3.2 - 10/15/2009
- [new] Added WFRPC.method (accepts 'get' or 'post').

Version 0.3.1 - 10/8/2009
- [bugfix] NullPlaceholder settings from one binding no longer "inject" themselves into other bindings on the same widget that don't have NullPlaceholder's.
- [bugfix] Convert WFRPC escape() calls to encodeUriComponent; fix WFYAHOO_widget_TreeView to not encode data anymore now that WFRPC does it for us.

Version 0.3.0 - 10/1/2009
- [bugfix] YUI Overlay (and subclasses) with fixedcenter=true and initial visibility=false would sometimes cause horizontal scrollbars on the document since YUI only re-calculates the center position if visible. We now force-recalculate this after rendering and the bug is gone!
- [bugfix] PhocoaDialog uploads now work on IE.

Version 0.2.9 - 9/25/2009
- [new] Rearrange PhocoaDialog javascript module to use the -min and -debug versions via YUILoader. Previously the minified version was never used.
- [bugfix] PhocoaDialog now supports file uploads.

Version 0.2.8 - 9/22/2009
- [new] Add new ValueTransformer: WFEmptyToNullTransformer
- [bugfix] NullPlaceholder in bindings now works with mutli-value pattern bindings, so if you have ValuePattern: '%1% credits', it used to turn into ' credits' but now it will be properly replaced with the NullPlaceholder
- [bugfix] Fix bug with KVC magic array operators not working on WFArray instances.