@@ -171,18 +171,31 @@ class WFDieselNav extends WFWidget
     {
         Element.hide('phocoaWFDieselNav_Popup_{$this->id}');
     }
+    function facetHandleClick(event)
+    {
+        cancelPopup();
+        showLoading();
+        if (event)
+        {
+            event.stopPropagation();     // allows click to fall thru to a.click => go to url
+        }
+    }
+    function showLoading()
+    {
     ";
     
             if ($this->showLoadingMessage)
             {
                 $html .= "
-    function showLoading()
-    {
-        PHOCOA.runtime.getObject('phocoaWFDieselNav_Loading_{$this->id}').show();
-    }
+        var loadingDlog = PHOCOA.runtime.getObject('phocoaWFDieselNav_Loading_{$this->id}');
+        if (loadingDlog)
+        {
+            loadingDlog.show();
+        }
     ";
             }
             $html .= "
+    }
     </script>
     <div id=\"{$this->id}\">
             ";
